--- a/src/app/views/management/property/property.component.html
+++ b/src/app/views/management/property/property.component.html
@@ -5,10 +5,10 @@
     <p-tabMenu [model]="items" [activeItem]="items[0]" ></p-tabMenu>
   </div>
   <div class="buttonBox">
-    <button style="width: 120px; margin-right: 20px" pButton icon="pi pi-search" label="ძებნა" class="ui-button-raised" (click)="inventorSearch()" *ngIf="searchBox !== true"></button>
     <button (click)="personDialog()" *ngIf="distributed" pButton type="button" label="განპიროვნება" class="ui-button-danger"></button>&nbsp;&nbsp;
     <button (click)="showDialog()"  pButton type="button" label="ინვ. შებრუნება" class="ui-button-raised"></button> &nbsp;&nbsp;
     <button (click)="inventoryToBuildingDialog()" *ngIf="distributed" pButton type="button" label="ინვ. მოძრაობა შენობებს შორის" class="ui-button-raised"></button>&nbsp;&nbsp;
+    <button  pButton icon="pi pi-search" label="ძებნა" class="ui-button-raised" (click)="inventorSearch()" *ngIf="searchBox !== true"></button>&nbsp;&nbsp;&nbsp;&nbsp;
     <span class="cart">
       <fa-icon [icon]="faCartPlus"  (click)="cartDialog()" size="2x"  ></fa-icon>
       {{this.cartItems.length}}
@@ -225,7 +225,7 @@
 <p-dialog header="ინვენტარის საწყობში დაბრუნება" *ngIf="display" [(visible)]="display" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="inventorReturnModel.inventarReturnGenerator">
-    <app-generator [transferToSection]="inventorReturnModel" [name]="dialogName" ></app-generator>
+    <app-generator [transferToSection]="inventorReturnModel" name="ქონების მართვის გასავლის ელ. ზედდებული" ></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!inventorReturnModel.inventarReturnGenerator">
     <div class="ui-g ui-fluid">
@@ -295,7 +295,7 @@
 <p-dialog header="ინვენტარის მოძრაობა შენობებს შორის" *ngIf="inventoryToBuildingDialogShow" [(visible)]="inventoryToBuildingDialogShow" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="inventorTransfer.generator">
-    <app-generator [transferToSection]="inventorTransfer" [name]="dialogName" ></app-generator>
+    <app-generator [transferToSection]="inventorTransfer" name="ქონების მართვის გასავლის ელ. ზედდებული" ></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!inventorTransfer.generator">
     <p-tabView (onChange)="onTabChange($event)" >
@@ -363,12 +363,11 @@
           </div>
         </div>
       </p-tabPanel>
-      <p-tabPanel header="პიროვნება" >
+      <!--p-tabPanel header="პიროვნება" >
         <div class="ui-g ui-fluid" >
           <div class="ui-g-12 ui-md-8">
             <div class="ui-g-12 ui-md-6">
               <p>თარიღი</p>
-              <!--p-calendar [minDate]="minDate" dateFormat="dd-mm-yy" [(ngModel)]="inventorTransfer.date" [showIcon]="true" [ngClass]="{ 'red':if_error(formErrors,'date')?'1px solid red': '' }"></p-calendar-->
               <form class="form-inline">
                 <div class="form-group">
                   <div class="input-group">
@@ -381,7 +380,6 @@
                 </div>
               </form>
             </div>
-
             <div class="ui-g-12 ui-md-6">
               <p>პიროვნება</p>
               <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedPerson"
@@ -407,9 +405,6 @@
                 </ng-template>
               </p-autoComplete>
             </div>
-
-
-
             <div class="ui-g-12 ui-md-6">
               <p>ტრანსპორტ. პასხ. პირი:</p>
               <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedCarrier"
@@ -428,7 +423,6 @@
             </div>
           </div>
           <div class="ui-g-12 ui-md-4">
-
             <div class="ui-g-12 ui-md-12">
               <p>ქონების მართვა</p>
               <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedProperty"
@@ -445,10 +439,9 @@
               <p>სექცია</p>
               <p-dropdown [disabled]="!inventorTransfer.selectedProperty" [options]="stockList" optionLabel="name" placeholder="აირჩიეთ სექცია" [(ngModel)]="inventorTransfer.selectedSection" [ngClass]="{ 'red':if_error(formErrors,'selectedSection')?'1px solid red': '' }" ></p-dropdown>
             </div>
-
           </div>
         </div>
-      </p-tabPanel>
+      </p-tabPanel-->
     </p-tabView>
     <app-cart [data]="cartItemsData" (checker)="checker($event)"></app-cart>
 
@@ -467,7 +460,7 @@
 <p-dialog header="განპიროვნება" *ngIf="personDialogShow" [(visible)]="personDialogShow" [modal]="true" [responsive]="true" [style]="{width: '900px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;" *ngIf="forPerson.generator">
-    <app-generator [transferToSection]="forPerson"  [name]="dialogName"></app-generator>
+    <app-generator [transferToSection]="forPerson"  name="ქონების მართვის გასავლის ელ. ზედდებული"></app-generator>
   </div>
   <div style="width: 100%;height: 500px;" *ngIf="!forPerson.generator">
 
