--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog.component.html
@@ -52,7 +52,7 @@
       </div>
   </div>
 
-  <div style="width: 2100px; overflow: auto; height: auto; min-height: 300px; max-height: 380px" >
+  <div style="width: 100%; overflow: auto; height: auto; min-height: 300px; max-height: 380px" >
     <div *ngFor="let inventor of newInventor.data">
       <app-inventor-income-dialog-fields
         [newInventor]="inventor"
