--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
@@ -1,11 +1,9 @@
-<div class="ui-g">
-    <div class="ui-g-1" >
+<div class="ui-g ui-fluid">
+    <div class="ui-md-3" >
       <p>დასახელება</p>
-      <p-autoComplete   [ngModelOptions]="{standalone: true}"  [(ngModel)]="newInventor.fullname"    [ngClass]="{ 'red':if_error(formErrors,'fullname')?'1px solid red': '' }"  field="name" [size]="30"
-                        placeholder="დასახელება" [minLength]="0"  (completeMethod)="onKeyUpName($event)"  (onSelect)="onSelectInventorName($event)" [suggestions]="filteredInventorNames" >
-      </p-autoComplete>
+      <p-autoComplete   [ngModelOptions]="{standalone: true}"  [(ngModel)]="newInventor.fullname"    [ngClass]="{ 'red':if_error(formErrors,'fullname')?'1px solid red': '' }"  field="name" [size]="30" placeholder="დასახელება" [minLength]="0"  (completeMethod)="onKeyUpName($event)"  (onSelect)="onSelectInventorName($event)" [suggestions]="filteredInventorNames" ></p-autoComplete>
     </div>
-    <div class="ui-g-1">
+    <div class="ui-g-3">
       <p>მარკა</p>
       <table>
         <tr>
@@ -19,7 +17,7 @@
         </tr>
       </table>
     </div>
-    <div class="ui-g-1">
+    <div class="ui-g-2">
       <p>მოდელი</p>
       <table>
         <tr>
@@ -33,7 +31,7 @@
         </tr>
       </table>
     </div>
-    <div class="ui-g-2" *ngIf="newInventor.isCar !==1">
+    <div class="ui-g-4" *ngIf="newInventor.isCar !==1">
       <div class="ui-inputgroup">
         <table style="width: 100%; border-collapse: collapse" >
           <tr >
@@ -44,13 +42,13 @@
           </tr>
           <tr >
             <td *ngIf="!newInventor.consumption" >
-              <p-dropdown [ngClass]="{ 'red':if_error(formErrors,'selectedBarcode')?'1px solid red': '' }" [autoWidth]="true" [options]="BarCodes"   placeholder="RS"  optionLabel="name" [(ngModel)]="newInventor.selectedBarcode"  [showClear]="true" (ngModelChange)="onLastCode()"  [style]="{ width: '50px'}"></p-dropdown>
+              <p-dropdown [ngClass]="{ 'red':if_error(formErrors,'selectedBarcode')?'1px solid red': '' }" [autoWidth]="true" [options]="BarCodes"   placeholder="RS"  optionLabel="name" [(ngModel)]="newInventor.selectedBarcode"  [showClear]="true" (ngModelChange)="onLastCode()"  [style]="{ width: '90px'}"></p-dropdown>
             </td>
             <td *ngIf="!newInventor.consumption">
-              <input type="text"  pInputText placeholder="შტრიხკოდი" style="width: 50px; height: 33px;" [(ngModel)]="newInventor.barCode"  [ngClass]="{ 'red':if_error(formErrors,'barCode')?'1px solid red': '' }" />
+              <input type="text"  pInputText placeholder="შტრიხკოდი" style="width: 100%; height: 33px;" [(ngModel)]="newInventor.barCode"  [ngClass]="{ 'red':if_error(formErrors,'barCode')?'1px solid red': '' }" />
             </td>
             <td>
-              <input type="text" pInputText placeholder="რაოდ" style="height: 33px;" [width]="{ 'width': newInventor.consumption? '100%': '100px'}" [(ngModel)]="newInventor.amount"  [ngClass]="{ 'red':if_error(formErrors,'amount')?'1px solid red': '' }" />
+              <input type="text" pInputText placeholder="რაოდ" style="width: 100%; height: 33px;" [width]="{ 'width': newInventor.consumption? '100%': '100px'}" [(ngModel)]="newInventor.amount"  [ngClass]="{ 'red':if_error(formErrors,'amount')?'1px solid red': '' }" />
             </td>
             <!--td *ngIf="newInventor.consumption">
               <input type="text" pInputText placeholder="" style="width: 100%; height: 33px;"  [(ngModel)]="newInventor.packageAmount" [ngClass]="{ 'red':if_error(formErrors,'packageAmount')?'1px solid red': '' }">
@@ -59,40 +57,43 @@
         </table>
       </div>
     </div>
-    <div class="ui-g-1" >
+    <div class="ui-g-2" >
       <p>განზომილების ერთეული</p>
       <div class="ui-inputgroup" >
         <p-dropdown [style]="{width: '100%'}" [ngClass]="{ 'red':if_error(formErrors,'selectedMeasureUnitName')?'1px solid red': '' }" [autoWidth]="true" class="measureUnits" [options]="MeasureUnits"  placeholder="ერთეული" optionLabel="name" [(ngModel)]="newInventor.selectedMeasureUnitName"  [showClear]="true" ></p-dropdown>
       </div>
     </div>
-    <div class="ui-g-1" >
+    <div class="ui-g-2" >
       <p>საქონლის ჯგუფი</p>
       <div class="ui-inputgroup">
         <input pInputText type="text" [ngClass]="{ 'red':if_error(formErrors,'itemGroupName')?'1px solid red': '' }"  placeholder="საქონლის ჯგუფი" disabled [(ngModel)]="newInventor.itemGroupName" style="width: 100%; height: 35px" />
         <button (click)="itemGroupDialog()" pButton type="button" label="..."></button>
       </div>
     </div>
-    <div class="ui-g-1"  style="max-width: 200px">
+    <div class="ui-g-2"  style="max-width: 200px">
       <label>ქარხნული ნომერი:
         <input type="text"  pInputText placeholder="" [(ngModel)]="newInventor.factoryNumber" style="height: 35px; width: 100%"/>
       </label>
     </div>
-    <div class="ui-g-1">
+    <div class="ui-g-2">
       <p>ინვენტარის ტიპი</p>
       <p-dropdown [style]="{width: '100%'}" [options]="ItemTypes"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemType')?'1px solid red': '' }" placeholder="ტიპი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemType" ></p-dropdown>
     </div>
-    <div class="ui-g-1">
+    <div class="ui-g-2">
       <p>ინვენტარის სტატუსი</p>
       <p-dropdown  [style]="{width: '100%'}"  [ngClass]="{ 'red':if_error(formErrors,'selectedItemStatus')?'1px solid red': '' }" [options]="ItemStatus"  placeholder="სტატუსი" optionLabel="name" [showClear]="true" [(ngModel)]="newInventor.selectedItemStatus"></p-dropdown>
     </div>
-    <div class="ui-g-1" >
+    <div class="ui-g-2" >
       <p>ერთეულის ფასი</p>
       <p-spinner size="30" step="0.25"   [(ngModel)]="newInventor.price" [ngClass]="{ 'red':if_error(formErrors,'price')?'1px solid red': '' }" ></p-spinner>
     </div>
-    <div class="ui-g-1" >
+    <div class="ui-g-2" >
       <p>სულ ფასი: {{ newInventor.price * newInventor.amount}}</p>
     </div>
 </div>
+
+
+
 <p-dialog header="საქონლის ჯგუფი" *ngIf="itemGroupDialogShow" [(visible)]="itemGroupDialogShow"
           [baseZIndex]="10000" id="itemGroup" [style]="{width: '500px' }">
   <!--p-tree [value]="ItemGroup" selectionMode="single"
