დავამატე table grid ი

--- a/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
+++ b/src/app/components/inventor/inventor-income-dialog/inventor-income-dialog-fields/inventor-income-dialog-fields.component.html
@@ -92,7 +92,42 @@
     </div>
 </div>
 
-
+<div class="tb_grid">
+  <p-table>
+    <ng-template pTemplate="header">
+      <tr>
+        <th>დასახელება</th>
+        <th>მარკა</th>
+        <th>მოდელი</th>
+        <th>რაოდენობა</th>
+        <th>განზომილების ერთეული</th>
+        <th>საქონლის ჯგუფი</th>
+        <th>ქარხნული ნომერი</th>
+        <th>ინვენტარის ტიპი</th>
+        <th>ინვენტარის სტატუსი</th>
+        <th>ქარხნული ნომერი</th>
+        <th>ფასი</th>
+        <th>სულ ფასი</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
 
 <p-dialog header="საქონლის ჯგუფი" *ngIf="itemGroupDialogShow" [(visible)]="itemGroupDialogShow"
           [baseZIndex]="10000" id="itemGroup" [style]="{width: '500px' }">
