--- a/src/app/views/management/warehouse/warehouse.component.html
+++ b/src/app/views/management/warehouse/warehouse.component.html
@@ -1,4 +1,4 @@
-<app-inventor-income-dialog  header="test" [dialog]="true"> </app-inventor-income-dialog>
+<app-inventor-income-dialog  header="ინვენტარის მიღება" [dialog]="true"> </app-inventor-income-dialog>
 <p-confirmDialog [style]="{width: '50vw'}" modal="modal"></p-confirmDialog>
 <div class="actionButton">
   <div class="buttonBox" style="width: 150px;">
